AC_INIT(fastlst/fastlst.cc)
AM_INIT_AUTOMAKE(fastlst, 2.0.2)
AM_CONFIG_HEADER(include/config.h)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CHECK_LIB(smapilnx, MsgOpenApi, [], [
echo -e "\nYou need a working smapi installation for this program to compile.\n"
exit 1
])

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h unistd.h)

AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd mktime strcspn strspn strtoul)

AC_OUTPUT(Makefile aplibs/Makefile aplibs/include/Makefile fastlst/Makefile include/Makefile include/max/Makefile)
