AC_INIT(fastlst/fastlst.cc)
AM_INIT_AUTOMAKE(fastlst, 2.0.4-beta)
AM_CONFIG_HEADER(include/config.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl expand libdir if necessary
if test "$libdir" = "\${exec_prefix}/lib"; then
  libdir=${prefix}/lib
fi

LDFLAGS="$LIBS -L$libdir"
AC_SEARCH_LIBS(MsgOpenApi, smapi smapilnx smapiqnx, [ ],
[  echo -e "\nYou need a working smapi installation for this program to compile.\n"
  exit 1
])

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h unistd.h string.h strings.h)

AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd mktime strcspn strspn strtoul strcasecmp)

AC_OUTPUT(Makefile aplibs/Makefile aplibs/include/Makefile fastlst/Makefile include/Makefile include/max/Makefile)
