## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libap.a
libap_a_SOURCES = \
anumlst.cc areadat.cc cfgfile.cc comprcfg.cc dates.cc dir.cc dirstack.cc \
dosfind.cc fbbs.cc fbd.cc fblib.cc file.cc harderr.cc \
heapstor.cc maxacs.cc maxprm.cc mdir.cc misc.cc namelist.cc \
outwrap.cc parsetxt.cc runcmd.cc sqnetscn.cc sqtagpat.cc \
strlst.cc timers.cc v7lib.cc wordstore.cc writelog.cc

DEFS=-DUNIX
INCLUDES=-Iinclude -I../include -I../include/max
SUBDIRS = include
