## Process this file with automake to produce Makefile.in

DEFS=-DUNIX
INCLUDES=-I../include -I../include/max
bin_PROGRAMS = fastlst
fastlst_SOURCES = \
addrs.cc \
cfgdata.cc \
common.cc \
crc16.cc \
data.cc \
daydir.cc \
edit.cc \
export.cc \
fastlst.cc \
field.cc \
filesbbs.cc \
flstdat.cc \
inmem.cc \
inpblk.cc \
inpbprep.cc \
iocur.cc \
misc.cc \
msgapier.cc \
outblk.cc \
parse.cc \
parsecfg.cc \
parsecia.cc \
parsecil.cc \
parsecin.cc \
parsecio.cc \
parsecsa.cc \
parsecsl.cc \
parseglb.cc \
parsetyp.cc \
phtrans.cc \
response.cc 
LDADD=../aplibs/libap.a
