## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
.hpptrans.h \
common.hpp \
crc16.hpp \
crc16tab.hpp \
data.hpp \
daydir.hpp \
defines.hpp \
edit.hpp \
export.hpp \
field.hpp \
flstdat.hpp \
inmem.hpp \
inpblk.hpp \
iocur.hpp \
misc.hpp \
msgapier.hpp \
outblk.hpp \
parse.hpp \
parsecia.hpp \
parsecil.hpp \
parsecin.hpp \
parsecio.hpp \
parsecsa.hpp \
parsecsl.hpp \
parseglb.hpp \
parsetyp.hpp \
response.hpp \
types.hpp \
v7.hpp \
phtrans.hpp \
addrs.hpp \
cfgdata.hpp \
filesbbs.hpp \
parsecfg.hpp \
apcom.hpp \
apctrl.hpp \
apgenlb2.hpp \
apgenlib.hpp \
apspc1.hpp \
bbsgenlb.hpp \
defines.h \
fblib.hpp \
pmlib.hpp \
typedefs.h \
v7lib.hpp \
winctl.hpp

SUBDIRS = max
